--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,24 @@ server:
 spring:
   application:
     name: springboot-demo
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 123456
+    url: jdbc:mysql://localhost:3306/user_test?useUnicode=true&characterEncoding=utf8
+  redis:
+    host: localhost
+    port: 6379
+    connect-timeout: 5000
+    timeout: 3000
+    lettuce:
+      pool:
+        max-active: 100 #最大连接数
+        max-idle: 8 #最大空闲数
+        max-wait: -1  #最大阻塞等待时间
+        min-idle: 8 #最小空闲数
+    sentinel:
+      master: master
 logging:
   level:
     com:
