--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,8 +21,19 @@ spring:
         min-idle: 8 #最小空闲数
     sentinel:
       master: master
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
+    default-property-inclusion: always
 logging:
   level:
     com:
       springboot:
         demo: debug
+mybatis-plus:
+  type-enums-package: com.springboot.demo
+  global-config:
+    db-config:
+      logic-delete-field: flag  # 全局逻辑删除的实体字段名
+      logic-delete-value: 0 # 逻辑已删除值(默认为 1)
+      logic-not-delete-value: 1 # 逻辑未删除值(默认为 0)
