--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://localhost:3306/user_test?useUnicode=true&characterEncoding=utf8
+    #url: jdbc:mysql://localhost:3306/user_test?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://192.168.50.148:3306/user_test?useUnicode=true&characterEncoding=utf8
   redis:
     host: localhost
     port: 6379
