--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,19 +13,18 @@ spring:
     password: 123456
     url: jdbc:mysql://www.xhoyoyang.top:33060/springboot-demo?useUnicode=true&characterEncoding=utf8
 #    url: jdbc:mysql://192.168.50.148:3306/user_test?useUnicode=true&characterEncoding=utf8
-#  redis:
-#    host: localhost
-#    port: 6379
-#    connect-timeout: 5000
-#    timeout: 3000
-#    lettuce:
-#      pool:
-#        max-active: 100 #最大连接数
-#        max-idle: 8 #最大空闲数
-#        max-wait: -1  #最大阻塞等待时间
-#        min-idle: 2 #最小空闲数
-#    sentinel:
-#      master: master
+  redis:
+    host: www.xhoyoyang.top
+    port: 16379
+    connect-timeout: 5000
+    timeout: 3000
+    lettuce:
+      pool:
+        max-active: 100 #最大连接数
+        max-idle: 8 #最大空闲数
+        max-wait: -1  #最大阻塞等待时间
+        min-idle: 2 #最小空闲数
+
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
