--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,14 @@
             <artifactId>commons-pool2</artifactId>
         </dependency>
 
+        <!-- redisson -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.16.6</version>
+        </dependency>
+
+
         <!-- guava -->
         <dependency>
             <groupId>com.google.guava</groupId>
