--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8080
   servlet:
-    context-path: "/demo"
+    context-path: /demo
 spring:
   profiles:
     active: dev
@@ -12,7 +12,9 @@ spring:
     username: root
     password: 123456
     url: jdbc:mysql://www.xhoyoyang.top:33060/springboot-demo?useUnicode=true&characterEncoding=utf8
-#    url: jdbc:mysql://192.168.50.148:3306/user_test?useUnicode=true&characterEncoding=utf8
+    hikari:
+      connection-timeout: 3000
+  #    url: jdbc:mysql://192.168.50.148:3306/user_test?useUnicode=true&characterEncoding=utf8
   redis:
     host: www.xhoyoyang.top
     port: 16379
@@ -31,11 +33,9 @@ spring:
     default-property-inclusion: always
     locale: zh_CN
 logging:
-#  level:
-#    com:
-#      springboot:
-#        demo: debug
   config: classpath:logback-spring.xml
+  level:
+    root: info
 mybatis-plus:
   type-enums-package: com.springboot.demo
   global-config:
