--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
             <version>1.18.20</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.logstash.logback </groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>5.3</version>
+        </dependency>
+
         <!-- swagger -->
         <!--<dependency>
             <groupId>io.springfox</groupId>
