--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,6 +47,9 @@ spring:
             class: org.quartz.simpl.SimpleThreadPool # 线程池类型
     jdbc:
       initialize-schema: never
+#  elasticsearch:
+#    rest:
+#      uris: http://www.xhoyoyang.top:19200
 
 logging:
   config: classpath:logback-spring.xml
@@ -56,6 +59,6 @@ mybatis-plus:
   type-enums-package: com.springboot.demo
   global-config:
     db-config:
-      logic-delete-field: flag  # 全局逻辑删除的实体字段名
-      logic-delete-value: 0 # 逻辑已删除值(默认为 1)
-      logic-not-delete-value: 1 # 逻辑未删除值(默认为 0)
+      logic-delete-field: deleted  # 全局逻辑删除的实体字段名
+      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
+      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
