--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,12 +11,14 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://www.xhoyoyang.top:13306/springboot-demo?useUnicode=true&characterEncoding=utf8
+#    url: jdbc:mysql://www.xhoyoyang.top:13306/springboot-demo?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://192.168.50.100:13306/springboot-demo?useUnicode=true&characterEncoding=utf8
     hikari:
       connection-timeout: 3000
   #    url: jdbc:mysql://192.168.50.148:3306/user_test?useUnicode=true&characterEncoding=utf8
   redis:
-    host: www.xhoyoyang.top
+#    host: www.xhoyoyang.top
+    host: 192.168.50.100
     port: 16379
     connect-timeout: 5000
     timeout: 3000
