--- a/pom.xml
+++ b/pom.xml
@@ -122,13 +122,20 @@
         <dependency>
             <groupId>net.logstash.logback </groupId>
             <artifactId>logstash-logback-encoder</artifactId>
-            <version>5.3</version>
+            <version>7.2</version>
         </dependency>
 
         <!-- es -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
+
+        <!-- spring for apache kafka -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>2.7.14</version>
         </dependency>
 
         <!-- swagger -->
