--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,15 +11,15 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 123456
-#    url: jdbc:mysql://www.xhoyoyang.top:13306/springboot-demo?useUnicode=true&characterEncoding=utf8
-    url: jdbc:mysql://192.168.50.100:13306/springboot-demo?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://101.34.34.194:13306/springboot-demo?useUnicode=true&characterEncoding=utf8
+#    url: jdbc:mysql://192.168.50.100:13306/springboot-demo?useUnicode=true&characterEncoding=utf8
     hikari:
       connection-timeout: 3000
   #    url: jdbc:mysql://192.168.50.148:3306/user_test?useUnicode=true&characterEncoding=utf8
   redis:
 #    host: www.xhoyoyang.top
-    host: 192.168.50.10
-    port: 30065
+    host: 101.34.34.194
+    port: 16379
     connect-timeout: 5000
     timeout: 3000
     lettuce:
@@ -49,6 +49,19 @@ spring:
             class: org.quartz.simpl.SimpleThreadPool # 线程池类型
     jdbc:
       initialize-schema: never
+  kafka:
+    bootstrap-servers:  101.34.34.194:31062
+    producer:
+      acks: all
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      compression-type: gzip
+    consumer:
+      group-id: 1001
+      auto-offset-reset: latest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      max-poll-records: 100
 #  elasticsearch:
 #    rest:
 #      uris: http://www.xhoyoyang.top:19200
