--- a/pom.xml
+++ b/pom.xml
@@ -106,10 +106,10 @@
         </dependency>
 
         <!-- quartz -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-quartz</artifactId>
-        </dependency>
+        </dependency>-->
 
         <!-- lombok -->
         <dependency>
