--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,14 @@
             <version>2.7.14</version>
         </dependency>
 
+        <!-- jasypt -->
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+<!--            <version>3.0.4</version>-->
+            <version>2.1.2</version>
+        </dependency>
+
         <!-- swagger -->
         <!--<dependency>
             <groupId>io.springfox</groupId>
