--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,8 +18,9 @@ spring:
   #    url: jdbc:mysql://192.168.50.148:3306/user_test?useUnicode=true&characterEncoding=utf8
   redis:
 #    host: www.xhoyoyang.top
+    model: standalone
     host: 101.34.34.194
-    port: 16379
+    port: 30065
     connect-timeout: 5000
     timeout: 3000
     lettuce:
@@ -74,6 +75,8 @@ logging:
   config: classpath:logback-spring.xml
   level:
     root: info
+logstash:
+  host: logstash:4560
 mybatis-plus:
   type-enums-package: com.springboot.demo
   global-config:
