--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
   port: ${serverPort:8080}
   servlet:
-    context-path: /demo
+    context-path: /auth
 spring:
   profiles:
     active: dev
   application:
-    name: springboot.demo
+    name: springboot.auth
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
